--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
+# Запрет временных файлов с именем вида ~$кумент Microsoft Word.docx
 ~$*
+# Запрет резервных копий Revit с именем вида smp_model_house.0001.rvt
+*.????.???
